Management of the login/logout flow
- Used session variable to memorize the current flow of the user;
- An error is shown when the user fails the login in the system;

--- a/views/configuration.handlebars
+++ b/views/configuration.handlebars
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Configuration panel</h1>
-    <h2>{{ name }}</h2>
+    {{ username }} <a href="http://127.0.0.1:3087/logout">logout</a>
     
 <h5>White list</h5>
 <textarea rows="4" cols="50">
