--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,8 @@
 
-<h1>Welcome in Dreagle {{variable}} </h1>
+<h1>Welcome in Dreagle</h1>
 <form action="/loginPost" method="POST">
 Username: <input type="text" name="username">  <br>
 Password: <input type="password" name="password"> <br>
+    <font color="red"><p>{{message}}</p></font>
 <input type="submit" value="Log in">
 </form>
