starting implementing config controler

--- a/views/configuration.handlebars
+++ b/views/configuration.handlebars
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome in the configuration panel</title>
-</head>
-<body>
+
 <h1>Configuration panel</h1>
-    <h2>{{ name }}</h2>
-    
-<h5>White list</h5>
-<textarea rows="4" cols="50">
-At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies. 
-</textarea>
-</body>
-</html>
+ 
+<h2>Logs File</h2>
+ 	<a href="{{conf.get_logs_link}}">Download logs file</a>
+
+<h2>System Status</h2>
+ {{conf.system_status}}
+
+{% for wish in conf.get_whitelist %}
+BANANA <br />
+{% endfor %}
+
+<h2></h2>
