--- a/views/configuration.handlebars
+++ b/views/configuration.handlebars
@@ -1,19 +1,36 @@
+<div class="container">
 
-<h1>Configuration panel</h1>
-{{ username }} <a href="http://127.0.0.1:3087/logout">logout</a>
- 
-<h2>Logs File</h2>
- 	<a href="{{conf.get_logs_link}}">Download logs file</a>
+	 <div class="row">
+        <div class="col-md-12">
+			<h1 class="page-head-line">Configuration panel</h1>
+		</div>
+	</div>
+	<div class="row">
+        <div class="col-md-12">
+            <div class="">
+            	<h5>
+                	Welcome to your Dreagle dashboard!
+                </h5>
+            </div>
+        </div>
 
-<h2>System Status</h2>
-	{{conf.get_system_status}}
+    </div>
+	
+	 
+	<h2>Logs File</h2>
+	 	<a href="{{conf.get_logs_link}}">Download logs file</a>
 
-<h2>White List</h2>
+	<h2>System Status</h2>
+		<input type="checkbox" name="my-checkbox" class="switch" {{#if conf.get_system_status }} checked {{/if}} >
+		{{conf.get_system_status}}
 
-<textarea rows="4" cols="50">{{conf.system_status}}{{#each conf.get_whitelist}}
-{{this}}{{/each}}</textarea>
+	<h2>White List</h2>
 
-<h2>Push it away</h2>
-	{{conf.get_push_it_away}}
-<h2>Custom landing</h2>    
-    {{conf.get_custom_landing}}
+	<textarea rows="4" cols="50">{{conf.system_status}}{{#each conf.get_whitelist}}
+	{{this}}{{/each}}</textarea>
+
+	<h2>Push it away</h2>
+		{{conf.get_push_it_away}}
+	<h2>Custom landing</h2>    
+	    {{conf.get_custom_landing}}
+</container>
