--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,13 @@
-
-<h1>Welcome in Dreagle</h1>
-<form action="/loginPost" method="POST">
-Username: <input type="text" name="username">  <br>
-Password: <input type="password" name="password"> <br>
-    <font color="red"><p>{{message}}</p></font>
-<input type="submit" value="Log in">
-</form>
+    <div class="content-wrapper">
+        <div class="container">
+            <div class="row">
+				<h1 class="page-head-line">Welcome to Dreagle</h1>
+				<form action="/loginPost" method="POST">
+					Username: <input type="text" name="username">  <br><br>
+					Password: <input type="password" name="password"> <br>
+					    <font color="red"><p>{{message}}</p></font>
+						<input type="submit" value="Log in" class="btn btn-info">
+				</form>
+			</div>
+		</div>
+	</div>
